--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light">
                         <i class="fas fa-download me-2"></i>
                         Resume 
                     </a>
