--- a/old_index.html
+++ b/old_index.html
@@ -16,7 +16,6 @@
     </head>
 
     <body id="page-top">
-
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
@@ -34,49 +33,60 @@
                 </div>
             </div>
         </nav>
-
         <!-- Masthead-->
-        <header class="bg-primary text-white text-center pt-5 pb-3">
-            <div class="container d-flex align-items-center flex-column mt-4 py-5">
+        <header class="masthead bg-primary text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="mb-5" src="assets/img/avataaars.svg" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 id="header-name" class="text-uppercase mb-0">Ian Reimers</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Ian Reimers</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-terminal"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
                 <!-- Masthead Subheading-->
-                <p class="font-weight-light mb-4 lead invisible text-gen">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0 invisible">Graphic Artist - Web Designer - Illustrator</p>
             </div>
         </header>
-
         <!-- Portfolio Section-->
-        <section class="page-section portfolio py-5" id="portfolio">
-            <div class="container pb-5">
+        <section class="page-section portfolio" id="portfolio">
+            <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="pt-5 page-section-heading text-center text-uppercase text-secondary">Portfolio</h2> 
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2> 
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-line"></div>
+                    <!-- div class="divider-custom-icon"><i class="fas fa-terminal"></i></div -->
+                    <div class="divider-custom-line"></div>
+                </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center mt-5">
                     <!-- Portfolio Item 1-->
-                    <div class="col-md-5 col-lg-6 mb-5" data-aos="fade-up">
-                        <a href="https://charlestonal.com" target="_blank">
-                            <img class="rounded portfolio-item img-fluid border border-secondary" src="assets/img/portfolio/charlestonal.png" alt="..." />
-                        </a>
+                    <div class="col-md-5 col-lg-6 mb-5">
+                        <a href="https://charlestonal.com" target="_blank"><img class="img-fluid shadow border border-secondary" src="assets/img/portfolio/charlestonal.png" alt="..." /></a>
                     </div>
-                    <!-- Portfolio Item 2-->
-                    <div class="col-md-5 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="200">
-                        <a href="https://momclubwyo.org/" target="_blank">
-                            <img class="rounded portfolio-item img-fluid border border-secondary" src="assets/img/portfolio/momclub.png" alt="..." />
-                        </a>
+                    <div class="col-md-5 col-lg-6 mb-5">
+                        <a href="https://momclubwyo.org/" target="_blank"><img class="img-fluid shadow border border-secondary" src="assets/img/portfolio/momclub.png" alt="..." /></a>
                     </div>
                 </div>
             </div>
         </section>
-
         <!-- About Section-->
-        <section id="about" class="page-section bg-primary text-white pt-5 pb-4 mb-0">
+        <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white py-5">About</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
                 <!-- About Section Content-->
-                <div data-aos="fade-up" data-aos-delay="100" data-aos-offset="125" class="row justify-content-lg-center">
+                <div class="row justify-content-lg-center">
                     <div class="col-lg-5 ">
                         <p class="lead">
                             Hello, welcome to my portfolio webpage. I'm a freelance full stack web developer who enjoys helping out small bussinesses on the web.
@@ -86,7 +96,7 @@
                     </div>
                 </div>
                 <!-- About Section Button-->
-                <div class="text-center py-4" data-aos="fade-up" data-aos-offset="100" data-aos-delay="100" >
+                <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light">
                         <i class="fas fa-download me-2"></i>
                         Resume 
@@ -94,16 +104,19 @@
                 </div>
             </div>
         </section>
-
         <!-- Contact Section-->
         <section class="page-section" id="contact">
-            <div class="container py-5 mb-5" >
-
+            <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="my-5 page-section-heading text-center text-uppercase text-secondary">Contact Me</h2>
-
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
                 <!-- Contact Section Form-->
-                <div class="row justify-content-center" data-aos="fade" data-aos-offset="300">
+                <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
                         <form>
                             <!-- Name input-->
@@ -132,21 +145,18 @@
                                 <div class="invalid-feedback">A message is required.</div>
                             </div>
                             <!-- Submit Button-->
-                            <div class="form-group d-flex justify-content-center">
-                                <button class="w-100 btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
-                            </div>
+                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
                         </form>
                     </div>
                 </div>
             </div>
         </section>
-
         <!-- Footer-->
-        <footer class="footer text-center bg-secondary">
+        <footer class="footer text-center">
             <div class="container">
-                <div class="py-4 row d-flex justify-content-center align-items-center">
+                <div class="row">
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 mb-5 mb-lg-0">
                         <!-- h4 class="text-uppercase mb-4">Around the Web</h4 -->
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-github"></i></a>
@@ -155,8 +165,8 @@
             </div>
         </footer>
         <!-- Copyright Section-->
-        <div class="copyright py-3 text-center text-white bg-primary">
-            <div class="container"><small>Copyright &copy; Ian Reimers 2023</small></div>
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>Copyright &copy; Your Website 2023</small></div>
         </div>
         <script type="module" src="./src/main.ts"></script>
     </body>
