enabled form send button

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div data-netlify-recaptcha="true"></div>
                             <!-- Submit Button-->
                             <div class="form-group d-flex justify-content-center">
-                                <button class="w-100 btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
+                                <button class="w-100 btn btn-primary btn-xl" id="submitButton" type="submit">Send</button>
                             </div>
                         </form>
                     </div>
