--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <!-- Contact Section Form-->
                 <div class="row justify-content-center" data-aos="fade" data-aos-offset="300">
                     <div class="col-lg-8 col-xl-7">
-                        <form name="contact" methods="POST" data-netlify="true">
+                        <form name="contact" methods="POST" netlify-honeypot="bot-field" data-netlify="true">
                             <!-- Honeypot field -->
                             <div class="invisible position-absolute mx-0 my-0 py-0 px-0">
                                 <input class="form-control py-0 m-0" id="name" type="text" placeholder="Enter your name..." name="bot-field"/>
