--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         <form name="contact" methods="POST" netlify-honeypot="bot-field" data-netlify="true">
                             <!-- Honeypot field -->
                             <div class="invisible position-absolute mx-0 my-0 py-0 px-0">
-                                <input class="form-control py-0 m-0" id="name" type="text" placeholder="Enter your name..." name="bot-field"/>
-                                <label for="name">Don't fill this input field out if you're human</label>
+                                <input class="form-control py-0 m-0" id="honeypot" type="text" placeholder="Enter your name..." name="bot-field"/>
+                                <label for="honeypot">Don't fill this input field out if you're human</label>
                             </div>
 
                             <!-- Name input-->
