--- a/index.html
+++ b/index.html
@@ -20,16 +20,28 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top" >Ian Reimers</a>
-                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
+                <a class="navbar-brand text-white" href="#page-top" >Ian Reimers</a>
+                <div> 
+                    <a class="btn btn-outline-light btn-social mx-1 d-lg-none" href="https://linkedin.com/in/ian-reimers"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    <a class="me-4 btn btn-outline-light btn-social mx-1 d-lg-none" href="https://github.com/cretlo"><i class="fab fa-fw fa-github"></i></a>
+                    <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                    <ul class="navbar-nav ms-auto align-items-center">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="text-white nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="text-white nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="text-white nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                        <li class="nav-item mx-0 d-none d-lg-flex mx-lg-1">
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/ian-reimers"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        </li>
+                        <li class="nav-item mx-0 d-none d-lg-flex mx-lg-1">
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/cretlo"><i class="fab fa-fw fa-github"></i></a>
+                        </li>
+
+
+                        
                     </ul>
                 </div>
             </div>
@@ -157,8 +169,8 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-12">
                         <!-- h4 class="text-uppercase mb-4">Around the Web</h4 -->
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/ian-reimers"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/cretlo"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                 </div>
             </div>
