--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     </head>
 
-    <body id="page-top">
+    <body id="page-top" data-bs-spy="scroll" data-bs-target=".navbar">
 
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg bg-primary text-uppercase fixed-top" id="mainNav">
+            <div class="container-lg">
                 <a class="navbar-brand text-white" href="#page-top" >Ian Reimers</a>
                 <div> 
                     <a class="btn btn-outline-light btn-social mx-1 d-lg-none" href="https://linkedin.com/in/ian-reimers"><i class="fab fa-fw fa-linkedin-in"></i></a>
@@ -29,8 +29,8 @@
                     </button>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto align-items-center">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="text-white nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
+                    <ul class="navbar-nav ms-auto d-lg-flex align-items-center d-block text-start">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="active text-white nav-link py-3 ps-2 px-0 px-lg-3 rounded" aria-current="page" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="text-white nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="text-white nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                         <li class="nav-item mx-0 d-none d-lg-flex mx-lg-1">
@@ -84,7 +84,7 @@
         </section>
 
         <!-- About Section-->
-        <section id="about" class="page-section bg-primary text-white pt-5 pb-4 mb-0">
+        <section id="about" class="page-section bg-primary text-white pt-5 pb-5 mb-0">
             <div class="container">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white py-5">About</h2>
@@ -94,7 +94,7 @@
                         <p class="lead">
                             Hello, welcome to my portfolio webpage. I'm a freelance full stack web developer who enjoys helping out small bussinesses on the web.
                             At the moment, I'm finishing my last semester of a Computer Science major at the University of Wyoming. Even though I do work on the side as a 
-                            freelancer, I am currently career seeking, so please don't hesitate to reach out.
+                            freelancer, I am currently career seeking, so please don't hesitate to reach out. 
                         </p>
                     </div>
                 </div>
