fixed lead paragraph typo

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div data-aos="fade-up" data-aos-delay="100" data-aos-offset="125" class="row justify-content-lg-center">
                     <div class="col-lg-5 ">
                         <p class="lead">
-                            Hello, welcome to my portfolio webpage. I'm a freelance full stack web developer who enjoys helping out small bussinesses on the web.
+                            Hello, welcome to my portfolio webpage. I'm a freelance full-stack web developer who enjoys helping out small businesses on the web.
                             At the moment, I'm finishing my last semester of a Computer Science major at the University of Wyoming. Even though I do work on the side as a 
                             freelancer, I am currently career seeking, so please don't hesitate to reach out. 
                         </p>
