moved resume pdf to public folder for vite

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center py-4" data-aos="fade-up" data-aos-offset="100" data-aos-delay="100" >
-                    <a class="btn btn-xl btn-outline-light" href="assets/Ian_Reimers_Resume.pdf" target="_blank">
+                    <a class="btn btn-xl btn-outline-light" href="/Ian_Reimers_Resume.pdf" target="_blank">
                         <i class="fas fa-download me-2"></i>
                         Resume 
                     </a>
